--- a/CSS/calculator.css
+++ b/CSS/calculator.css
@@ -1,59 +1,92 @@
 body {
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  margin: 0;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-image: url(/assects/Images/wallpaper.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+.calculator {
+  width: 430px;
+  height: 530px;
+  background-color: rgba(0, 0, 0, 0.5);
+
+  border: 1px solid black;
+  padding: 30px;
+  border-radius: 30px;
+}
+.container {
+  width: 100%;
+  height: calc(100% - 100px);
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(4, 1fr);
+  gap: 10px;
+  margin-bottom: 20px;
+}
+.box {
+  color: white;
+  background-color: rgba(128, 128, 128, 0.5);
+  border: none;
+  font-size: 25px;
+  border-radius: 1.5rem;
+}
+.box:hover,
+.cancel:hover {
+  background-color: rgba(128, 128, 128, 0.8);
+  cursor: pointer;
+}
+.input {
+  width: 100%;
+  height: 80px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 25px;
+}
+
+.cancel {
+  width: 25%;
+  height: 80px;
+  border-radius: 1.5rem;
+  border: none;
+  outline: none;
+  background-color: rgba(49, 47, 47, 0.929);
+  color: white;
+  font-size: 25px;
+}
+
+input {
+  width: calc(80% - 80px);
+  height: calc(100% - 20px);
+  border-radius: 1.5rem;
+  text-align: right;
+  padding: 10px;
+  font-size: 30px;
+  border: none;
+  outline: none;
+  background-color: beige;
+}
+
+@media screen and (min-width: 0px) and (max-width: 320px) {
+  body {
   }
   .calculator {
-    width: 700px;
-    height: 500px;
-    border: 1px solid black;
-    padding: 10px;
-  }
-  .container {
-    width: 100%;
-    height: calc(100% - 100px);
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(4, 1fr);
-    gap: 10px;
-    margin-bottom: 10px;
-  }
-  .box {
-    color: black;
-    background-color: aqua;
-    border: none;
-    font-size: 20px;
-    border-radius: 1.5rem;
-  }
-  .input {
-    width: 100%;
-    height: 80px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-bottom: 10px;
+    width: 250px;
+    height: 400px;
+    padding: 20px;
+    border-radius: 20px;
   }
 
   .cancel {
-    width: 25%;
-    height: 80px;
-    border-radius: 1.5rem;
-    border: none;
-    outline: none;
-    background-color: aqua;
-    font-size: 20px;
+   height: 65px;
   }
 
   input {
-    width: calc(80% - 80px);
-    height: calc(100% - 20px);
-    border-radius: 1.5rem;
-    text-align: right;
-    padding: 10px;
-    font-size: 30px;
-    border: none;
-    outline: none;
-    background-color: beige;
+    width: calc(80% - 60px);
+    height: calc(100% - 36px);
   }
+}
